# k8s_cluster_maintain

./: .gitignore  README.md  Vagrantfile  ansible-requirements.yml  hosts_file_generation.sh  post_install.sh  pyproject.toml  ubuntu-20.04-packer-template.json
ansible_playbooks/: install_basic_stuff.yml  test_playbook.yml
collections/ansible_collections/kubernetes.core-1.2.1.info/: GALAXY.yml
